Adding animation principle

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 
         <section>
           <section id='principle-1' class='content'>
-            <div>Hello</div>
+            <div class='parentContainer'><div></div></div>
           </section>
         </section>
 
         <section>
           <section id='principle-2' class='content'>
-            <div>Hello 2</div>
+            <div></div>
           </section>
         </section>
 
