Added new principles

--- a/index.html
+++ b/index.html
@@ -15,26 +15,48 @@
     <body>
 
         <section>
+          <p>Easing</p>
           <section id='principle-1' class='content'>
             <div class='parentContainer'><div></div></div>
           </section>
         </section>
 
         <section>
+          <p>Delay</p>
           <section id='principle-2' class='content'>
-            <div></div>
+            <div class='parentContainer'>
+              <div></div>
+              <div></div>
+              <div></div>
+            </div>
           </section>
         </section>
 
         <section>
+          <p>Parenting</p>
           <section id='principle-3' class='content'>
-            #1
+            <div class='parentContainer'>
+                <div></div>
+                <div></div>
+            </div>
           </section>
         </section>
 
         <section>
+          <p>Transformation</p>
           <section id='principle-4' class='content'>
-            #1
+            <div class='parentContainer'>
+                <div></div>
+            </div>
+          </section>
+        </section>
+
+        <section>
+          <p>Value change</p>
+          <section id='principle-5' class='content'>
+            <div class='parentContainer'>
+                <div id='valueChange'>0</div>
+            </div>
           </section>
         </section>
 
