Added several new principles

--- a/index.html
+++ b/index.html
@@ -60,6 +60,56 @@
           </section>
         </section>
 
+        <section>
+          <p>Masking</p>
+          <section id='principle-6' class='content'>
+            <div class='parentContainer'>
+              <div></div>
+              <div></div>
+            </div>
+          </section>
+        </section>
+
+        <section>
+          <p>Overlay</p>
+          <section id='principle-7' class='content'>
+            <div class='parentContainer'>
+              <div></div>
+              <div></div>
+            </div>
+          </section>
+        </section>
+
+        <section>
+          <p>Cloning</p>
+          <section id='principle-8' class='content'>
+            <div class='parentContainer'>
+              <div></div>
+              <div></div>
+
+              <svg xmlns="http://www.w3.org/2000/svg" version="1.1">
+                <defs>
+                  <filter id="goo">
+                    <feGaussianBlur in="SourceGraphic" stdDeviation="10" result="blur" />
+                    <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -7" result="goo" />
+                    <feBlend in="SourceGraphic" in2="goo" />
+                	</filter>
+                </defs>
+              </svg>
+            </div>
+          </section>
+        </section>
+
+        <section>
+          <p>Obscuration</p>
+          <section id='principle-9' class='content'>
+            <div class='parentContainer'>
+              <div></div>
+              <div></div>
+            </div>
+          </section>
+        </section>
+
         <script src="js/main.js"></script>
     </body>
 </html>
