Added last principles

--- a/index.html
+++ b/index.html
@@ -110,6 +110,45 @@
           </section>
         </section>
 
+        <section>
+          <p>Parallax</p>
+          <section id='principle-10' class='content'>
+            <div class='parentContainer'>
+              <div></div>
+              <div></div>
+              <div></div>
+            </div>
+          </section>
+        </section>
+
+        <section>
+          <p>Dimensionality</p>
+          <section id='principle-11' class='content'>
+            <div class='parentContainer'>
+              <div></div>
+            </div>
+          </section>
+        </section>
+
+        <section>
+          <p>Dolly & Zoom</p>
+          <section id='principle-12' class='content'>
+              <div class='parentContainer'>
+                <section>
+                  <div></div>
+                  <div></div>
+                  <div></div>
+                  <div></div>
+                  <div></div>
+                  <div></div>
+                  <div></div>
+                  <div></div>
+                  <div></div>
+                </section>
+              </div>
+          </section>
+        </section>
+
         <script src="js/main.js"></script>
     </body>
 </html>
