Added realtime principle animation

--- a/index.html
+++ b/index.html
@@ -149,6 +149,19 @@
           </section>
         </section>
 
+        <section>
+          <p>Real time animation</p>
+          <section id='principle-realtime' class='content'>
+              <div class='parentContainer'>
+                  <div class='cursor'></div>
+                  <div></div>
+                  <div></div>
+                  <div></div>
+                  <div></div>
+              </div>
+          </section>
+        </section>
+
         <script src="js/main.js"></script>
     </body>
 </html>
