Final principles and new concepts

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
           <p>Value change</p>
           <section id='principle-5' class='content'>
             <div class='parentContainer'>
+                <div></div>
                 <div id='valueChange'>0</div>
             </div>
           </section>
@@ -152,6 +153,19 @@
         <section>
           <p>Real time animation</p>
           <section id='principle-realtime' class='content'>
+              <div class='parentContainer'>
+                  <div class='cursor'></div>
+                  <div></div>
+                  <div></div>
+                  <div></div>
+                  <div></div>
+              </div>
+          </section>
+        </section>
+
+        <section>
+          <p>Non-Real time animation</p>
+          <section id='principle-nonrealtime' class='content'>
               <div class='parentContainer'>
                   <div class='cursor'></div>
                   <div></div>
