--- a/index.html
+++ b/index.html
@@ -13,169 +13,171 @@
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
+      <section id='wrapper'>
 
-        <section>
-          <p>Easing</p>
-          <section id='principle-1' class='content'>
-            <div class='parentContainer'><div></div></div>
+          <section class='block'>
+            <p>Easing</p>
+            <section id='principle-1' class='content'>
+              <div class='parentContainer'><div></div></div>
+            </section>
           </section>
-        </section>
 
-        <section>
-          <p>Delay</p>
-          <section id='principle-2' class='content'>
-            <div class='parentContainer'>
-              <div></div>
-              <div></div>
-              <div></div>
-            </div>
-          </section>
-        </section>
-
-        <section>
-          <p>Parenting</p>
-          <section id='principle-3' class='content'>
-            <div class='parentContainer'>
-                <div></div>
-                <div></div>
-            </div>
-          </section>
-        </section>
-
-        <section>
-          <p>Transformation</p>
-          <section id='principle-4' class='content'>
-            <div class='parentContainer'>
-                <div></div>
-            </div>
-          </section>
-        </section>
-
-        <section>
-          <p>Value change</p>
-          <section id='principle-5' class='content'>
-            <div class='parentContainer'>
-                <div></div>
-                <div id='valueChange'>0</div>
-            </div>
-          </section>
-        </section>
-
-        <section>
-          <p>Masking</p>
-          <section id='principle-6' class='content'>
-            <div class='parentContainer'>
-              <div></div>
-              <div></div>
-            </div>
-          </section>
-        </section>
-
-        <section>
-          <p>Overlay</p>
-          <section id='principle-7' class='content'>
-            <div class='parentContainer'>
-              <div></div>
-              <div></div>
-            </div>
-          </section>
-        </section>
-
-        <section>
-          <p>Cloning</p>
-          <section id='principle-8' class='content'>
-            <div class='parentContainer'>
-              <div></div>
-              <div></div>
-
-              <svg xmlns="http://www.w3.org/2000/svg" version="1.1">
-                <defs>
-                  <filter id="goo">
-                    <feGaussianBlur in="SourceGraphic" stdDeviation="10" result="blur" />
-                    <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -7" result="goo" />
-                    <feBlend in="SourceGraphic" in2="goo" />
-                	</filter>
-                </defs>
-              </svg>
-            </div>
-          </section>
-        </section>
-
-        <section>
-          <p>Obscuration</p>
-          <section id='principle-9' class='content'>
-            <div class='parentContainer'>
-              <div></div>
-              <div></div>
-            </div>
-          </section>
-        </section>
-
-        <section>
-          <p>Parallax</p>
-          <section id='principle-10' class='content'>
-            <div class='parentContainer'>
-              <div></div>
-              <div></div>
-              <div></div>
-            </div>
-          </section>
-        </section>
-
-        <section>
-          <p>Dimensionality</p>
-          <section id='principle-11' class='content'>
-            <div class='parentContainer'>
-              <div></div>
-            </div>
-          </section>
-        </section>
-
-        <section>
-          <p>Dolly & Zoom</p>
-          <section id='principle-12' class='content'>
+          <section class='block'>
+            <p>Delay</p>
+            <section id='principle-2' class='content'>
               <div class='parentContainer'>
-                <section>
-                  <div></div>
-                  <div></div>
-                  <div></div>
-                  <div></div>
-                  <div></div>
-                  <div></div>
-                  <div></div>
-                  <div></div>
-                  <div></div>
-                </section>
+                <div></div>
+                <div></div>
+                <div></div>
               </div>
+            </section>
           </section>
-        </section>
 
-        <section>
-          <p>Real time animation</p>
-          <section id='principle-realtime' class='content'>
+          <section class='block'>
+            <p>Parenting</p>
+            <section id='principle-3' class='content'>
               <div class='parentContainer'>
-                  <div class='cursor'></div>
-                  <div></div>
-                  <div></div>
                   <div></div>
                   <div></div>
               </div>
+            </section>
           </section>
-        </section>
 
-        <section>
-          <p>Non-Real time animation</p>
-          <section id='principle-nonrealtime' class='content'>
+          <section class='block'>
+            <p>Transformation</p>
+            <section id='principle-4' class='content'>
               <div class='parentContainer'>
-                  <div class='cursor'></div>
-                  <div></div>
-                  <div></div>
-                  <div></div>
                   <div></div>
               </div>
+            </section>
           </section>
-        </section>
 
-        <script src="js/main.js"></script>
+          <section class='block'>
+            <p>Value change</p>
+            <section id='principle-5' class='content'>
+              <div class='parentContainer'>
+                  <div></div>
+                  <div id='valueChange'>0</div>
+              </div>
+            </section>
+          </section>
+
+          <section class='block'>
+            <p>Masking</p>
+            <section id='principle-6' class='content'>
+              <div class='parentContainer'>
+                <div></div>
+                <div></div>
+              </div>
+            </section>
+          </section>
+
+          <section class='block'>
+            <p>Overlay</p>
+            <section id='principle-7' class='content'>
+              <div class='parentContainer'>
+                <div></div>
+                <div></div>
+              </div>
+            </section>
+          </section>
+
+          <section class='block'>
+            <p>Cloning</p>
+            <section id='principle-8' class='content'>
+              <div class='parentContainer'>
+                <div></div>
+                <div></div>
+
+                <svg xmlns="http://www.w3.org/2000/svg" version="1.1">
+                  <defs>
+                    <filter id="goo">
+                      <feGaussianBlur in="SourceGraphic" stdDeviation="10" result="blur" />
+                      <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -7" result="goo" />
+                      <feBlend in="SourceGraphic" in2="goo" />
+                  	</filter>
+                  </defs>
+                </svg>
+              </div>
+            </section>
+          </section>
+
+          <section class='block'>
+            <p>Obscuration</p>
+            <section id='principle-9' class='content'>
+              <div class='parentContainer'>
+                <div></div>
+                <div></div>
+              </div>
+            </section>
+          </section>
+
+          <section class='block'>
+            <p>Parallax</p>
+            <section id='principle-10' class='content'>
+              <div class='parentContainer'>
+                <div></div>
+                <div></div>
+                <div></div>
+              </div>
+            </section>
+          </section>
+
+          <section class='block'>
+            <p>Dimensionality</p>
+            <section id='principle-11' class='content'>
+              <div class='parentContainer'>
+                <div></div>
+              </div>
+            </section>
+          </section>
+
+          <section class='block'>
+            <p>Dolly & Zoom</p>
+            <section id='principle-12' class='content'>
+                <div class='parentContainer'>
+                  <section>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                  </section>
+                </div>
+            </section>
+          </section>
+
+          <section class='block'>
+            <p>Real time animation</p>
+            <section id='principle-realtime' class='content'>
+                <div class='parentContainer'>
+                    <div class='cursor'></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+            </section>
+          </section>
+
+          <section class='block'>
+            <p>Non-Real time animation</p>
+            <section id='principle-nonrealtime' class='content'>
+                <div class='parentContainer'>
+                    <div class='cursor'></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+            </section>
+          </section>
+
+      </section>
+      <script src="js/main.js"></script>
     </body>
 </html>
